--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body style="background-color: #1e2f49; margin: 0; padding: 0;">
 
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
-      <div class="container-fluid" style="justify-content: space-between;">
+      <div class="container-fluid">
           <!-- закоментил ссылку на navbar-brand 
           <a class="navbar-brand" href="#"></a>
           -->
