--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -68,25 +68,17 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="photos">
         <div class="col">
           <div class="card shadow-sm">
-            <div class="fotoicon">
-              <!-- закоментил тег svg и вместо него вставил тег img
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-              -->
-              <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" alt="Пес-хомяк" height="225"></a>
-            </div>
 
+            <div class="text-center">
+              <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" class="rounded" alt="Пес-хомяк"></a>
+            </div>
+            
             <div class="card-body">
               <p class="card-text">Морская свинка или собака?</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_01.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
-                  <!-- закоментил кнопку редактирования
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Редактировать</button>
-                  -->
                 </div>
-                  <!-- закоментил тег small
-                  <small class="text-muted">9 mins</small>
-                  -->
               </div>
             </div>
           </div>
