--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -68,11 +68,9 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="photos">
         <div class="col">
           <div class="card shadow-sm">
-
-            <div class="text-center">
-              <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" class="rounded" alt="Пес-хомяк"></a>
+            <div class="fotoicon">
+              <a href="images/vins/IMG_01.jpg" target="_blank"><img src="images/vins/IMG_01M.jpg" class="rounded" alt="Пес-хомяк" height="225"></a>
             </div>
-            
             <div class="card-body">
               <p class="card-text">Морская свинка или собака?</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -86,7 +84,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" alt="Семья" height="225"></a>
+              <a href="images/vins/IMG_02.jpg" target="_blank"><img src="images/vins/IMG_02M.jpg" class="rounded" alt="Семья" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Суровая мама Лилу и ее первый помет</p>
@@ -102,7 +100,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" alt="В новом доме" height="225"></a>
+              <a href="images/vins/IMG_03.jpg" target="_blank"><img src="images/vins/IMG_03M.jpg" class="rounded" alt="В новом доме" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">В новом доме</p>
