--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -81,6 +81,7 @@
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
@@ -116,7 +117,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_04.jpg" target="_blank"><img src="images/vins/IMG_04M.jpg" alt="Мама" height="225"></a>
+              <a href="images/vins/IMG_04.jpg" target="_blank"><img src="images/vins/IMG_04M.jpg" class="rounded" alt="Мама" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">С новой мамой</p>
@@ -132,7 +133,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_05.jpg" target="_blank"><img src="images/vins/IMG_05M.jpg" alt="Канат" height="225"></a>
+              <a href="images/vins/IMG_05.jpg" target="_blank"><img src="images/vins/IMG_05M.jpg" class="rounded" alt="Канат" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Винс тренируется на канате</p>
@@ -148,7 +149,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_06.jpg" target="_blank"><img src="images/vins/IMG_06M.jpg" alt="Лежанка" height="225"></a>
+              <a href="images/vins/IMG_06.jpg" target="_blank"><img src="images/vins/IMG_06M.jpg" class="rounded" alt="Лежанка" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Когда-то лежанка казалась большой</p>
@@ -164,7 +165,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_07.jpg" target="_blank"><img src="images/vins/IMG_07M.jpg" alt="Еж" height="225"></a>
+              <a href="images/vins/IMG_07.jpg" target="_blank"><img src="images/vins/IMG_07M.jpg" class="rounded" alt="Еж" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">С ёжиком из IKEA</p>
@@ -180,7 +181,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_08.jpg" target="_blank"><img src="images/vins/IMG_08M.jpg" alt="Устал" height="225"></a>
+              <a href="images/vins/IMG_08.jpg" target="_blank"><img src="images/vins/IMG_08M.jpg" class="rounded" alt="Устал" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Zzzz</p>
@@ -196,7 +197,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_09.jpg" target="_blank"><img src="images/vins/IMG_09M.jpg" alt="Лопатка" height="225"></a>
+              <a href="images/vins/IMG_09.jpg" target="_blank"><img src="images/vins/IMG_09M.jpg" class="rounded" alt="Лопатка" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Еще одна игрушка</p>
@@ -212,7 +213,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_10.jpg" target="_blank"><img src="images/vins/IMG_10M.jpg" alt="Зима" height="225"></a>
+              <a href="images/vins/IMG_10.jpg" target="_blank"><img src="images/vins/IMG_10M.jpg" class="rounded" alt="Зима" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Первая зима</p>
@@ -228,7 +229,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_11.jpg" target="_blank"><img src="images/vins/IMG_11M.jpg" alt="Выставка" height="225"></a>
+              <a href="images/vins/IMG_11.jpg" target="_blank"><img src="images/vins/IMG_11M.jpg" class="rounded" alt="Выставка" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Выставка - такое себе мероприятие</p>
@@ -244,7 +245,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_12.jpg" target="_blank"><img src="images/vins/IMG_12M.jpg" alt="Сестры" height="225"></a>
+              <a href="images/vins/IMG_12.jpg" target="_blank"><img src="images/vins/IMG_12M.jpg" class="rounded" alt="Сестры" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">В семейном кругу</p>
@@ -260,7 +261,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_13.jpg" target="_blank"><img src="images/vins/IMG_13M.jpg" alt="Дети" height="225"></a>
+              <a href="images/vins/IMG_13.jpg" target="_blank"><img src="images/vins/IMG_13M.jpg" class="rounded" alt="Дети" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Басенджи любят детей</p>
@@ -276,7 +277,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_14.jpg" target="_blank"><img src="images/vins/IMG_14M.jpg" alt="Картина" height="225"></a>
+              <a href="images/vins/IMG_14.jpg" target="_blank"><img src="images/vins/IMG_14M.jpg" class="rounded" alt="Картина" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Дети любят собаку</p>
@@ -292,7 +293,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_15.jpg" target="_blank"><img src="images/vins/IMG_15M.jpg" alt="Рязань" height="225"></a>
+              <a href="images/vins/IMG_15.jpg" target="_blank"><img src="images/vins/IMG_15M.jpg" class="rounded" alt="Рязань" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Крокодилов не обнаружено</p>
@@ -308,7 +309,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_16.jpg" target="_blank"><img src="images/vins/IMG_16M.jpg" alt="Поля" height="225"></a>
+              <a href="images/vins/IMG_16.jpg" target="_blank"><img src="images/vins/IMG_16M.jpg" class="rounded" alt="Поля" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Рязаские просторы</p>
@@ -324,7 +325,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_17.jpg" target="_blank"><img src="images/vins/IMG_17M.jpg" alt="Казань" height="225"></a>
+              <a href="images/vins/IMG_17.jpg" target="_blank"><img src="images/vins/IMG_17M.jpg" class="rounded" alt="Казань" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Великолепная Казань</p>
@@ -340,7 +341,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_18.jpg" target="_blank"><img src="images/vins/IMG_18M.jpg" alt="ЖиГоры" height="225"></a>
+              <a href="images/vins/IMG_18.jpg" target="_blank"><img src="images/vins/IMG_18M.jpg" class="rounded" alt="ЖиГоры" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">В Жигулевских горах</p>
@@ -356,7 +357,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_19.jpg" target="_blank"><img src="images/vins/IMG_19M.jpg" alt="Болото" height="225"></a>
+              <a href="images/vins/IMG_19.jpg" target="_blank"><img src="images/vins/IMG_19M.jpg" class="rounded" alt="Болото" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Истринские болота</p>
@@ -372,7 +373,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_20.jpg" target="_blank"><img src="images/vins/IMG_20M.jpg" alt="Типи" height="225"></a>
+              <a href="images/vins/IMG_20.jpg" target="_blank"><img src="images/vins/IMG_20M.jpg" class="rounded" alt="Типи" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Самая длинная басенджи</p>
@@ -388,7 +389,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_21.jpg" target="_blank"><img src="images/vins/IMG_21M.jpg" alt="Лес" height="225"></a>
+              <a href="images/vins/IMG_21.jpg" target="_blank"><img src="images/vins/IMG_21M.jpg" class="rounded" alt="Лес" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Нахабинский лес</p>
@@ -404,7 +405,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_22.jpg" target="_blank"><img src="images/vins/IMG_22M.jpg" alt="Сплю" height="225"></a>
+              <a href="images/vins/IMG_22.jpg" target="_blank"><img src="images/vins/IMG_22M.jpg" class="rounded" alt="Сплю" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Прогнал кожаного и отдыхаю</p>
@@ -420,7 +421,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_23.jpg" target="_blank"><img src="images/vins/IMG_23M.jpg" alt="Курсинг" height="225"></a>
+              <a href="images/vins/IMG_23.jpg" target="_blank"><img src="images/vins/IMG_23M.jpg" class="rounded" alt="Курсинг" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">От меня не убежишь</p>
@@ -436,7 +437,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_24.jpg" target="_blank"><img src="images/vins/IMG_24M.jpg" alt="Курсинг2" height="225"></a>
+              <a href="images/vins/IMG_24.jpg" target="_blank"><img src="images/vins/IMG_24M.jpg" class="rounded" alt="Курсинг2" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Курсинг значительно веселее выставок</p>
@@ -452,7 +453,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_25.jpg" target="_blank"><img src="images/vins/IMG_25M.jpg" alt="Туман" height="225"></a>
+              <a href="images/vins/IMG_25.jpg" target="_blank"><img src="images/vins/IMG_25M.jpg" class="rounded" alt="Туман" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Туманный денек</p>
@@ -468,7 +469,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_26.jpg" target="_blank"><img src="images/vins/IMG_26M.jpg" alt="Глушь" height="225"></a>
+              <a href="images/vins/IMG_26.jpg" target="_blank"><img src="images/vins/IMG_26M.jpg" class="rounded" alt="Глушь" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Тверская глушь</p>
@@ -484,7 +485,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_27.jpg" target="_blank"><img src="images/vins/IMG_27M.jpg" alt="Деревня" height="225"></a>
+              <a href="images/vins/IMG_27.jpg" target="_blank"><img src="images/vins/IMG_27M.jpg" class="rounded" alt="Деревня" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">В родной деревне</p>
@@ -500,7 +501,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_28.jpg" target="_blank"><img src="images/vins/IMG_28M.jpg" alt="Бабочка" height="225"></a>
+              <a href="images/vins/IMG_28.jpg" target="_blank"><img src="images/vins/IMG_28M.jpg" class="rounded" alt="Бабочка" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">День знаний 2022 года</p>
@@ -516,7 +517,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_29.jpg" target="_blank"><img src="images/vins/IMG_29M.jpg" alt="Творчество" height="225"></a>
+              <a href="images/vins/IMG_29.jpg" target="_blank"><img src="images/vins/IMG_29M.jpg" class="rounded" alt="Творчество" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Творчество фан-клуба</p>
@@ -532,7 +533,7 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_30.jpg" target="_blank"><img src="images/vins/IMG_30M.jpg" alt="Рожица" height="225"></a>
+              <a href="images/vins/IMG_30.jpg" target="_blank"><img src="images/vins/IMG_30M.jpg" class="rounded" alt="Рожица" height="225"></a>
             </div>
             <div class="card-body">
               <p class="card-text">Винс умеет корчить рожи</p>
