--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -312,7 +312,7 @@
               <a href="images/vins/IMG_16.jpg" target="_blank"><img src="images/vins/IMG_16M.jpg" class="rounded" alt="Поля" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Рязаские просторы</p>
+              <p class="card-text">Рязанские просторы</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_16.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
