--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
       <div class="container-fluid">
+
+        <div class="d-flex justify-content-evenly">
+
           <!-- закоментил ссылку на navbar-brand 
           <a class="navbar-brand" href="#"></a>
           -->
@@ -47,6 +50,9 @@
           </a>
           </ul>
         </div>
+
+        </div>
+        
       </div>
     </nav>
     
