--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -31,8 +31,8 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Контакты</h4>
           <ul class="list-unstyled">
-            <li><a href="https://instagram.com/vinsent_basenji/" target="_blank" class="text-white">Instagramm - vinsent_basenji</a></li>
-            <li><a href="mailto:itsright@yandex.ru" class="text-white">Почта - itsright@yandex.ru</a></li>
+            <li><a href="https://instagram.com/vinsent_basenji/" target="_blank" class="text-white">Instagramm</a></li>
+            <li><a href="mailto:itsright@yandex.ru" class="text-white">Почта</a></li>
           </ul>
         </div>
       </div>
