--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li class="nav-item">
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
+            <li role="separator" class="divider"></li>
             <li class="nav-item">
               <!-- 
               <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
