--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body style="background-color: #1e2f49; margin: 0; padding: 0;">
 
-    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49; --bs-breadcrumb-divider: '>';" aria-label="breadcrumb"">
+
       <div class="container-fluid">
           <!-- закоментил ссылку на navbar-brand 
           <a class="navbar-brand" href="#"></a>
@@ -19,12 +20,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0 breadcrumb">
+            <li class="nav-item breadcrumb-item">
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
-            <li role="separator" class="divider"></li>
-            <li class="nav-item">
+            <li class="nav-item breadcrumb-item">
               <!-- 
               <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
               -->
@@ -34,10 +34,10 @@
                 </svg>CSS (в разработке)
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item breadcrumb-item">
               <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item breadcrumb-item">
               <!-- <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
               -->
               <a class="nav-link" href="#" target="_self">
