--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </li>
             <li class="nav-item breadcrumb-item">
               <!-- 
-              <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
+              <a class="nav-link" href="#" target="_self">CSS</a>
               -->
               <a class="nav-link" href="#" target="_self">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cone-striped" viewBox="0 0 16 16">
@@ -38,7 +38,7 @@
               <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
             <li class="nav-item breadcrumb-item">
-              <!-- <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
+              <!-- <a class="nav-link" href="#" target="_self">Обратная связь</a>
               -->
               <a class="nav-link" href="#" target="_self">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cone-striped" viewBox="0 0 16 16">
