--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body style="background-color: #1e2f49; margin: 0; padding: 0;">
 
-    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49; --bs-breadcrumb-divider: '>';" aria-label="breadcrumb"">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
 
       <div class="container-fluid">
           <!-- закоментил ссылку на navbar-brand 
@@ -20,13 +20,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0 breadcrumb">
-            <li class="nav-item breadcrumb-item">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
               <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
             </li>
-            <li class="nav-item breadcrumb-item">
+            <li class="nav-item">
               <!-- 
-              <a class="nav-link" href="#" target="_self">CSS</a>
+              <a class="nav-link" href="#" target="_self">CSS (в разработке)</a>
               -->
               <a class="nav-link" href="#" target="_self">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cone-striped" viewBox="0 0 16 16">
@@ -34,11 +34,11 @@
                 </svg>CSS (в разработке)
               </a>
             </li>
-            <li class="nav-item breadcrumb-item">
+            <li class="nav-item">
               <a class="nav-link" href="test-js-page.html" target="_blank">JS</a>
             </li>
-            <li class="nav-item breadcrumb-item">
-              <!-- <a class="nav-link" href="#" target="_self">Обратная связь</a>
+            <li class="nav-item">
+              <!-- <a class="nav-link" href="#" target="_self">Обратная связь (в разработке)</a>
               -->
               <a class="nav-link" href="#" target="_self">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cone-striped" viewBox="0 0 16 16">
