--- a/test-js-page.html
+++ b/test-js-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>JS</title>
-    <link rel="stylesheet" href="css/style-js-page.css">
+    <link rel="stylesheet" href="css/style-test-js-page.css">
   </head>
   <body>
     <header class="header">
