--- a/test-js-page.html
+++ b/test-js-page.html
@@ -9,6 +9,6 @@
     <header class="header">
       <h1 id="ages">Привет<br>мир!</h1>
     </header>
-    <script src="js/how_old_script.js"></script>
+    <script src="js/main-test-ja-page.js"></script>
   </body>
 </html>
