--- a/test-js-page.html
+++ b/test-js-page.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>JS</title>
+    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style-test-js-page.css">
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link howOld" href="#" target="_self">Сколько тебе лет?</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <header class="header">
       <h1 id="ages">Привет<br>мир!</h1>
     </header>
+    <script src="vendor/js/sweetalert2.all.min.js"></script>
+    <script src="vendor/js/bootstrap.bundle.min.js"></script>
     <script src="js/main-test-js-page.js"></script>
   </body>
 </html>
