--- a/test-js-page.html
+++ b/test-js-page.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link howOld" href="#" target="_self">Сколько тебе лет?</a>
+              <a class="nav-link howOld" href="#" target="_self">Скрипт №1: Сколько тебе лет?</a>
             </li>
           </ul>
         </div>
