--- a/test-js-page.html
+++ b/test-js-page.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
     <title>JS</title>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style-test-js-page.css">
+    <link rel="icon" href="images/favicon4.png" type="image/png">
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
