--- a/test-js-page.html
+++ b/test-js-page.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style-test-js-page.css">
     <link rel="icon" href="images/favicon4.png" type="image/png">
   </head>
-  <body>
+  <body style="background-color: #1e2f49; margin: 0; padding: 0;">
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
