--- a/test-js-page.html
+++ b/test-js-page.html
@@ -10,20 +10,18 @@
     <link rel="icon" href="images/favicon4.png" type="image/png">
   </head>
   <body style="background-color: #1e2f49; margin: 0; padding: 0;">
-    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #1e2f49;">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link howOld" href="#" target="_self">Скрипт №1: Сколько тебе лет?</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Простые JS скрипты
+      </button>
+      <ul class="dropdown-menu dropdown-menu-dark">
+        <li><a class="dropdown-item howOld" href="#">Скрипт №1: Сколько тебе лет?</a></li>
+        <li><a class="dropdown-item disabled" href="#">Скрипт №2</a></li>
+        <li><a class="dropdown-item disabled" href="#">Скрипт №3</a></li>
+      </ul>
+    </div>
+
     <header class="header">
       <h1 id="ages">Привет<br>мир!</h1>
     </header>
