--- a/test-js-page.html
+++ b/test-js-page.html
@@ -22,7 +22,10 @@
               <a class="nav-link howOld" href="#" target="_self">Скрипт №1: Сколько тебе лет?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" target="_self">Скрипт №2 (в разработке)</a>
+              <a class="nav-link apoj" href="#" target="_self">Скрипт №2: ОЛЯ-ЯЛО</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" target="_self">Скрипт №3 (в разработке)</a>
             </li>
           </ul>
         </div>
