--- a/test-js-page.html
+++ b/test-js-page.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link disabled" href="#" target="_self">Скрипт №3 (в разработке)</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" target="_self">На главную страницу</a>
+            </li>
           </ul>
         </div>
       </div>
