--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="shop-page.html" target="_blank">Магазин</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test-js-page.html" target="_blank">Простые скрипты</a>
+              <a class="nav-link" href="test-js-page.html" target="_self">Простые скрипты</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" target="_self">
