--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="vinsent-page.html" target="_blank">Страничка Винса</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop-page.html" target="_blank">Магазин</a>
+              <a class="nav-link" href="vinsent-page.html" target="_self">Страничка Винса</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="test-js-page.html" target="_self">Простые скрипты</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="shop-page.html" target="_blank">Магазин</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" target="_self">
