--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -33,6 +33,7 @@
           <ul class="list-unstyled">
             <li><a href="https://instagram.com/vinsent_basenji/" target="_blank" class="text-white">Instagramm</a></li>
             <li><a href="mailto:itsright@yandex.ru" class="text-white">Почта</a></li>
+            <li><a href="index.html" target="_self" class="text-white">Home</a></li>
           </ul>
         </div>
       </div>
