--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -547,6 +547,54 @@
           </div>
         </div>
 
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+              <a href="images/vins/IMG_31.jpg" target="_blank"><img src="images/vins/IMG_31M.jpg" class="rounded" alt="Простор" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Зеленковский карьер</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_31.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+              <a href="images/vins/IMG_32.jpg" target="_blank"><img src="images/vins/IMG_32M.jpg" class="rounded" alt="Винс грустит" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Винс грустит</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_32.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <div class="fotoicon">
+              <a href="images/vins/IMG_33.jpg" target="_blank"><img src="images/vins/IMG_33M.jpg" class="rounded" alt="Дома хорошо" height="225"></a>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Самая длинная басенджи</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a href="images/vins/IMG_33.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
