--- a/vinsent-page.html
+++ b/vinsent-page.html
@@ -582,10 +582,10 @@
         <div class="col">
           <div class="card shadow-sm">
             <div class="fotoicon">
-              <a href="images/vins/IMG_33.jpg" target="_blank"><img src="images/vins/IMG_33M.jpg" class="rounded" alt="Дома хорошо" height="225"></a>
+              <a href="images/vins/IMG_33.jpg" target="_blank"><img src="images/vins/IMG_33M.jpg" class="rounded" alt="Взгляд кота из Шрека" height="225"></a>
             </div>
             <div class="card-body">
-              <p class="card-text">Самая длинная басенджи</p>
+              <p class="card-text">Винс пробует "взгляд кота из Шрека"</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="images/vins/IMG_33.jpg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Показать</button></a>
